Add libraryTarget as library access

--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 <script src="main.js"></script>
+<script>
+const greeting = new Greeting();
+alert(greeting.sayHello());
+</script>
 </body>
 </html>
